# secas-blueprint

./: .dockerignore  .flake8  .gitignore  Developing.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  trivy-scan.yml
analysis/: constants.py
analysis/lib/: attribute_encoding.py  bounds.py  graph.py  input_areas.py  io.py  pygeos_util.py  raster.py  speedups.pyx  stats.py  util.py
analysis/lib/geometry/: __init__.py  aggregate.py  conversion.py  crs.py  intersection.py  polygons.py
analysis/lib/stats/: __init__.py  base_blueprint.py  blueprint.py  caribbean.py  chat.py  core.py  counties.py  florida.py  florida_marine.py  gulf_hypoxia.py  midse.py  natures_network.py  naturescape.py  nlcd.py  ownership.py  parca.py  protected_areas.py  rasterized_geometry.py  slr.py  southatlantic.py  summary_units.py  urban.py  wildfire_risk.py
analysis/post/: create_state_reports.py
analysis/prep/: README.md  create_raster_masks.py  create_raster_overviews.py  create_tiles.sh  download_slr.py  extract_slr_bounds.py  package_unit_data.py  prep_florida_marine.py  prepare_base_blueprint.py  prepare_blueprint.py  prepare_boundaries.py  prepare_caribbean.py  prepare_chat.py  prepare_florida.py  prepare_florida_marine.py  prepare_gulf_hypoxia.py  prepare_hubs_connectors.py  prepare_input_areas.py  prepare_midse.py  prepare_natures_network.py  prepare_naturescape.py  prepare_nlcd.py  prepare_ownership.py  prepare_protected_areas.py  prepare_slr.py  prepare_southatlantic.py  prepare_summary_units.py  prepare_urban.py  prepare_wildfire_risk.py  rasterize_slr.py  render_blueprint_tiles.py  tabulate_area.py  tabulate_summary_units.py
analysis/prep/tiles/: README.md  create_data_tiles.sh  create_raster_tiles.sh  create_vector_tiles.py  encode_pixel_layers.py
analysis/tiles/: create_tiles.sh  render_blueprint_tiles.py
api/: README.md  api.py  custom_report.py  geo.py  progress.py  settings.py  summary_unit_report.py  worker.py
api/report/: __init__.py  format.py
api/report/map/: __init__.py  aoi.py  basemap.py  caribbean.py  chat.py  errors.py  locator.py  mercator.py  ownership.py  raster.py  (+3 more)
api/stats/: __init__.py  custom_area.py  summary_units.py
constants/: README.md  base_blueprint.json  blueprint.json  corridors.json  ecosystems.json  hubs_connectors.json  indicators.json  input_area_values.json  inputs.json  ownership.json  parcas.json  pixel_layers_0.json  pixel_layers_1.json  pixel_layers_2.json  pixel_layers_3.json  pixel_layers_4.json  pixel_layers_5.json  pixel_layers_6.json  pixel_layers_7.json  pixel_layers_8.json  pixel_layers_9.json  protected_areas.json  protection.json  slr.json  subregions.json  urban.json  wildfire_risk.json
constants/indicators/: base.json  fl.json  flm.json  nn.json  sa.json  southatlantic.json
deploy/dev/: Caddyfile  docker-compose.yml
deploy/shared/: README.md
deploy/staging/: Caddyfile  docker-compose.yml
docker/api/: Dockerfile
source_data/base_blueprint/: README.md
source_data/blueprint/: README.md
source_data/boundaries/: README.md
source_data/caribbean/: README.md
source_data/chat/: README.md
source_data/florida/: README.md
source_data/gulf_hypoxia/: README.md
source_data/midSE/: README.md
source_data/natures_network/: README.md
source_data/naturescape/: README.md
source_data/nlcd/: README.md
source_data/ownership/: README.md
source_data/protected_areas/: README.md
source_data/slr/: README.md
source_data/southatlantic/: README.md
source_data/summary_units/: README.md
source_data/urban/: README.md
source_data/wildfire_risk/: README.md
tests/: test_maps.py  test_report.py  test_report_api.py
ui/: .eslintrc  .prettierignore  font-preload-cache.json  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.d.ts  app.html  config.js  theme.js
ui/static/: manifest.json
(+328 files in other folders)
