[build-system]
requires = ["setuptools", "Cython>=0.29", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "secas-blueprint"
version = "1.2.0"
description = "SECAS Southeast Conservation Blueprint Explorer"
readme = "README.md"
authors = [{ name = "Brendan C. Ward", email = "bcward@astutespruce.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "affine",
    "aiofiles",
    "arq",
    "fastapi",
    "geopandas",
    "gunicorn",
    "Jinja2",
    "numpy",
    "pandas",
    "Pillow",
    # NOTE: pyarrow 17 appears to have an error with registering the FileSystemFactory
    "pyarrow==16",
    "pymgl",
    "pyogrio",
    "python-calamine",
    "python-dotenv",
    "python-multipart",
    "rasterio",
    "sentry-sdk",
    "shapely",
    "uvicorn",
    "weasyprint",
]

[project.optional-dependencies]
dev = [
    "cython",
    "httpx[http2]",
    "progress",
    "ruff",
    "setuptools",
    "watchgod",
    "watchfiles",
]

[tool.ruff]
exclude = ['.scratch']
