[build-system]
requires = ["setuptools", "Cython>=0.29", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "secas-blueprint"
version = "1.2.0"
description = "SECAS Southeast Conservation Blueprint Explorer"
readme = "README.md"
authors = [{ name = "Brendan C. Ward", email = "bcward@astutespruce.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "affine",
    "aiofiles",
    "arq",
    "fastapi",
    "geopandas",
    "gunicorn",
    "Jinja2",
    "numba>=0.61.2",
    "numpy",
    "pandas",
    "Pillow",
    "progress",
    "pyarrow",
    "pymgl",
    "pyogrio",
    "python-calamine",
    "python-dotenv",
    "python-multipart",
    # IMPORTANT: rasterio 1.4.3 does not yet fully support GDAL 3.11
    "rasterio",
    # NOTE: redis 5.1 introduced changes that break arq
    "redis[hiredis]==5.0.0",
    "sentry-sdk",
    "shapely",
    "uvicorn",
    "weasyprint",
]

[project.optional-dependencies]
dev = ["cython", "httpx[http2]", "ruff", "setuptools", "watchgod", "watchfiles"]

[tool.setuptools.packages.find]
include = ["analysis", "api"]

[tool.ruff]
exclude = ['.scratch']
